added bottom section to product detail
Added bottom section to product details page

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -225,6 +225,13 @@ body {
   background-size: auto 100%;
 }
 
+.more-products {
+    font-size: 27px;
+    font-weight: 700;
+    margin-top: 40px;
+    margin-bottom: 60px;
+}
+
 .carousel {
     display: block;
     text-align: left;
