--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -59,6 +59,9 @@ Custom Css
 .bg-dark{
     background-color: #000000 !important;
 }
+.bg-gray {
+    background-color: #E0E0E0;
+}
 .mailchimp-submit{
     background-color: #000000 !important;
     color: #ffffff !important;
@@ -108,6 +111,14 @@ Custom Css
     font-size: 36px;
     font-weight: 700;
 }
+.blog-title {
+    font-size: 24px;
+    font-weight: 700;
+}
+.blog-copy {
+    font-size: 24px;
+    color: #828282;
+}
 .row-product{
     margin-bottom: 180px;
 }
@@ -151,6 +162,45 @@ Custom Css
 .collapse-title:hover {
     color: #000000;
     text-decoration: none;
+}
+
+.anchor-numb {
+    
+    text-decoration: none;
+    color: inherit;
+}
+.anchor-numb:hover {
+    
+    text-decoration: none;
+    color: inherit;
+}
+
+.icon-subtitle {
+    color: #000000;
+    font-size: 20px;
+}
+
+.iframe-container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+.text-nosotros {
+    color: #828282;
+    font-size: 17px;
+    text-align: justify;
 }
 
 .collapse-body {
